[package]
name = "rx_rust_mp"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", features = ["thread-pool"]}
num-traits = { version = "0.2.15", optional = true}
async-std = { version = "1.12.0", features = ["unstable"], optional = true}

[features]
default = ["math", "recurring"]
math = ["dep:num-traits"]
recurring = ["dep:async-std"]