[package]
name = "rx_rust_mp"
version = "0.7.2"
authors = ["Anton Oellerer"]
edition = "2021"
description = "A protoype implementation of the ReactiveX API in Rust using a message passing approach"
readme = "README.md"
repository = "https://github.com/AntonOellerer/rx_rust_mp"
license = "MIT"
keywords = ["reactivex", "rx", "frp", "mp", "message-passing"]
categories = ["asynchronous", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", features = ["thread-pool"]}
num-traits = { version = "0.2.15", optional = true}
async-std = { version = "1.12.0", features = ["unstable"], optional = true}
log = "0.4.17"

[features]
default = ["math", "recurring"]
math = ["dep:num-traits"]
recurring = ["dep:async-std"]